2009-01-10  Stefan Kost  <ensonic@users.sf.net>

	* configure.in:
	  Erm, not having a highlighter is not fatal.

2009-01-10  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	* TODO:
	* configure.in:
	* gtkdoc-fixxref.in:
	  Look for source-highlight and highlight. Not perfect yet, highlight uses
	  different classes in the css :/.

	* tests/gobject/docs/tester-docs.xml:
	  More header data in the examples.

2009-01-09  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtkdoc-scan.in:
	  Treat FOO_GET_INTERFACE as standard. Fixes #567132.

2009-01-09  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	* gtkdoc-fixxref.in:
	* gtkdoc-mkdb.in:
	* style.css:
	* tests/gobject/examples/gobject.c:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  Initial go at implementing syntax highlighting for sources using
	  gnu source-highlight. Needs testing and modularisation.

2009-01-08  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkhtml.in:
	  Comment out echo for debugging.

2009-01-08  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtkdoc-mkhtml.in:
	* tests/gobject/docs-tmpl/Makefile.am:
	* tests/gobject/docs/Makefile.am:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  Finally, make distcheck works.

2009-01-08  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-check.in:
	* gtkdoc-depscan.in:
	* gtkdoc-fixxref.in:
	* gtkdoc-mkdb.in:
	* gtkdoc-mkhtml.in:
	* gtkdoc-mkman.in:
	* gtkdoc-mktmpl.in:
	* gtkdoc-rebase.in:
	* gtkdoc-scan.in:
	* gtkdoc-scangobj.in:
	* gtkdoc-scanobj.in:
	* gtkdocize.in:
	  Add support for --help and --version to remaining tools. Also show a
	  short info on --help and format more consistently. Fixes #566911

2009-01-07  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.m4:
	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Detect gtkdoc-rebase in gtk-doc.m4. Based on idea of Sven Herzberg.
	  Fixes #562310

2009-01-07  Stefan Kost  <ensonic@users.sf.net>
