@@ -1,3 +1,8 @@
+2009-01-12  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtkdoc-fixxref.in:
+	  Make highligher post processing conditional.
+
 2009-01-10  Stefan Kost  <ensonic@users.sf.net>
 
 	* configure.in:
